# etf-holdings-parser

./: README.md  pyproject.toml
etf_holdings_parser/: __init__.py  base.py  sec_nport.py
etf_holdings_parser/eu/: amundi.py  bnpparibas.py  deka.py  fidelity.py  franklintempleton.py  goldmansachs.py  hsbc.py  invesco.py  ishares.py  jpmorgan.py  lng.py  spdr.py  ubs.py  vaneck.py  vanguard.py  wisdomtree.py  xtrackers.py
etf_holdings_parser/us/: dimensional.py  fidelity.py  firsttrust.py  invesco.py  ishares.py  jpmorgan.py  schwab.py  spdr.py  vanguard.py  wisdomtree.py
tests/: test_base_registry.py  test_eu_amundi.py  test_eu_ishares.py  test_eu_vanguard.py  test_fee_drag.py  test_us_ishares.py  test_us_spdr.py
tests/fixtures/: amundi_core_msci_world_physical_sample.json  amundi_msci_world_swap_sample.json  cspx_holdings_sample.csv  igln_overview_sample.xls  spy_holdings_sample.csv  vwra_holdings_sample.csv
