[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-holdings-parser"
version = "0.1.0"
description = "Pure parsers that turn raw ETF issuer holdings exports (CSV/XML) into a normalized holding record shape. No network/HTTP code — fetching is the caller's responsibility."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.urls]
Homepage = "https://github.com/dibyajyoti/etf-holdings-parser"

[tool.setuptools.packages.find]
include = ["etf_holdings_parser*"]
